--- a/updatelog/index.html
+++ b/updatelog/index.html
@@ -25,7 +25,7 @@
       .ver100board {
         border: 1px solid #ccc;
         border-radius: 5px;
-        margin: 20px;
+        margin: 40px;
         box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
       }
       .ver100board p {
@@ -41,7 +41,10 @@
     </div>
     <div class="ver100board">
       <p>Alpha 1.0.0</p>
-      <p>Release date: August 23rd, 2025.</p>
+      <p>Release date: August 21st, 2025.</p>
+      <button>Download unavalible</button>
+      <p>Alpha 1.1.0</p>
+      <p>Release date: August 22nd, 2025</p>
       <button>Download exe</button>
     </div>
   </body>
